--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
                         <span class="text-primary">Dhawan</span>
                     </h1>
                     <div class="subheading mb-5"></div>
-                         Base Park West, Bangkok, Thailand (+66)808301994
-                        <a href="mailto:vimit0601@live.com">vimit0601@live.com</a>
+                         Base Park West, Bangkok, Thailand (+66)808301994 <a href="mailto:vimit0601@live.com">vimit0601@live.com</a>
                     </div>
-                    <p class="lead mb-5">Decisive, Results-Focused Senior Developer offering an experience of around 6 years in the IT Industry. Possessing excellent analytical skills summed up with strong knowledge in Core Java, Scala, Play, Springs, Spring Boot, Microservices, JPA, Hibernate, Kafka, RabbitMQ, Docker and GIT.</p>
+                    <p class="lead mb-5">Decisive, Results-Focused Senior Developer offering an experience of around 6 years in the IT Industry. 
+                        Possessing excellent analytical skills summed up with strong knowledge in 
+                        Core Java, Scala, Play, Springs, Spring Boot, Microservices, JPA, Hibernate, Kafka, RabbitMQ, Docker and GIT.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/vimit-dhawan-3373179a/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/vimitdhawan"><i class="fab fa-github"></i></a>
