update about secion

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         Vimit
                         <span class="text-primary">Dhawan</span>
                     </h1>
-                    <div class="subheading mb-5"></div>
+                    <div class="subheading mb-5">
                          Base Park West, Bangkok, Thailand (+66)808301994 <a href="mailto:vimit0601@live.com">vimit0601@live.com</a>
                     </div>
                     <p class="lead mb-5">Decisive, Results-Focused Senior Developer offering an experience of around 6 years in the IT Industry. 
