--- a/index.html
+++ b/index.html
@@ -170,7 +170,19 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <a href="https://agoda.udemy.com/certificate/UC-91ca45e6-368a-4bd7-9ca8-166dd655852a"> Apache Kafka</a>
+                           <a href="https://www.coursera.org/account/accomplishments/verify/TVD4E6MASME4"> Data Structures</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <a href="https://www.coursera.org/account/accomplishments/verify/P5NS3M6RM76T"> Data Science in Python</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <a href="https://www.coursera.org/account/accomplishments/records/G6443L29A3AJ"> Algorithms on Graphs</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <a href="https://www.coursera.org/account/accomplishments/verify/VDRBEKWKK9WZ"> Convolutional Neural Networks</a>
                         </li>
                     </ul>
                 </div>
