--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a Sofware developer, I enjoy most of my time being outdoors. I enjoy mountain biking, free climbing, Rafting, Paragliding, Bungee jumping, and kayaking. </p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the back-end development world.</p>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fa fa-tripadvisor"></i></span>
+                            <a href="https://drive.google.com/file/d/0B5LSZU1T-NTVekpldXZKTmpUTTQ/view?usp=sharing"> Bungee Jumping</a>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
