--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <p class="mb-5">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the back-end development world.</p>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-tripadvisor"></i></span>
+                            <span class="fa-li"><i class="fas fa-map"></i></span>
                             <a href="https://drive.google.com/file/d/0B5LSZU1T-NTVekpldXZKTmpUTTQ/view?usp=sharing"> Bungee Jumping</a>
                         </li>
                     </ul>
