--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Cerificates</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#articles">Articles</a></li>
                 </ul>
             </div>
         </nav>
@@ -189,6 +190,26 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                            <a href="https://www.coursera.org/account/accomplishments/verify/VDRBEKWKK9WZ"> Convolutional Neural Networks</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Articles-->
+            <section class="resume-section" id="articles">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Articles</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a href="https://www.linkedin.com/pulse/mysql-springboot-application-inside-docker-container-vimit-dhawan/"> MySQL and SpringBoot Application inside Docker</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <a href="https://www.linkedin.com/pulse/functional-programming-java-vimit-dhawan/"> Functional Programming in Java</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <a href="https://www.linkedin.com/pulse/create-generic-improved-caching-docker-file-vimit-dhawan/"> Create Generic and Improved Caching Docker File</a>
                         </li>
                     </ul>
                 </div>
