--- a/index.html
+++ b/index.html
@@ -172,23 +172,23 @@
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fad fa-award text-warning"></i></span>
                             <a href="https://www.coursera.org/account/accomplishments/verify/UJ7RTFNMSZ6Y"> Algorithmic Toolbox</a>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fad fa-award text-warning"></i></span>
                            <a href="https://www.coursera.org/account/accomplishments/verify/TVD4E6MASME4"> Data Structures</a>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fad fa-award text-warning"></i></span>
                            <a href="https://www.coursera.org/account/accomplishments/verify/P5NS3M6RM76T"> Data Science in Python</a>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fad fa-award text-warning"></i></span>
                            <a href="https://www.coursera.org/account/accomplishments/records/G6443L29A3AJ"> Algorithms on Graphs</a>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fad fa-award text-warning"></i></span>
                            <a href="https://www.coursera.org/account/accomplishments/verify/VDRBEKWKK9WZ"> Convolutional Neural Networks</a>
                         </li>
                     </ul>
@@ -200,15 +200,15 @@
                     <h2 class="mb-5">Articles</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-book-opentext-warning"></i></span>
                             <a href="https://www.linkedin.com/pulse/mysql-springboot-application-inside-docker-container-vimit-dhawan/"> MySQL and SpringBoot Application inside Docker</a>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-book-opentext-warning"></i></span>
                            <a href="https://www.linkedin.com/pulse/functional-programming-java-vimit-dhawan/"> Functional Programming in Java</a>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <span class="fa-li"><i class="fas fa-book-open text-warning"></i></span>
                            <a href="https://www.linkedin.com/pulse/create-generic-improved-caching-docker-file-vimit-dhawan/"> Create Generic and Improved Caching Docker File</a>
                         </li>
                     </ul>
