--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-map"></i></span>
-                            <a href="https://drive.google.com/file/d/0B5LSZU1T-NTVekpldXZKTmpUTTQ/view?usp=sharing"> Bungee Jumping</a>
+                            <a href="https://drive.google.com/file/d/1mZBKNYSfJw81EbJdLnGUUSLg2Larfisw/view?usp=sharing">Bungee Jumping</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-map"></i></span>
+                            <a href="https://drive.google.com/file/d/1OigKF2kHkVKpdg21fRWpoUMX9ef4zGfr/view?usp=sharing">Parasailing</a>
                         </li>
                     </ul>
                 </div>
